# cardGames

./: CMakeLists.txt  main.c
blackJack/: blackJack.h  blackJackCard.c  blackJackCard.h  blackJackPlayer.c  blackJackPlayer.h  mapping.c  mapping.h
blackJack/blackJackAPI/: blackJack.h  blackJackCard.c  blackJackCard.h  blackJackPlayer.c  blackJackPlayer.h  calculateBet.c  calculateBet.h
blackJack/cardCount/: cardCountBlackJack.c  cardCountBlackJack.h  probabilityCalculator.c  probabilityCalculator.h
blackJack/game/: automateBlackJack.c  automateBlackJack.h  playBlackJack.c  playBlackJack.h
cardAPI/: api.c  api.h  deckStack.c  deckStack.h  player.c  player.h  simpleStack.c  simpleStack.h  stack.c  stack.h  utilityFunctions.c  utilityFunctions.h
cmake/: FindGMP.cmake
generalAPI/: largeNumber.c  largeNumber.h  userInput.c  userInput.h
